# personal-website

./: .env  .gitignore  .npmrc  Cargo.toml  README.md  firebase.js  firestore.rules  mdx-components.js  next-sitemap.config.js  next.config.mjs  package-lock.json  package.json  tailwind.config.js  youtube-description-tune-m1-brake-light.txt
api/: crab.rs
app/: globals.css  layout.js  page.js
app/art/: page.js
app/blog/: layout.js  page.js  page.mdx
app/components/: sw-register.js
app/forgot-password/: page.js
app/getData/: f-to-c-to-k.js  fibonacci.js  guessing-game.js  index.js  rust-mascot.js  twelve-days.js
app/hooks/: use-window-size.js
app/partners/: layout.js  page.js
app/products/: product-links.js
app/projects/: page.js  page.mdx
app/server-actions/: unsplash.js
app/signup/: page.js
app/tenant-dashboard/: page.js
app/test-tenant/: page.js
app/writing/: layout.js  page.js
components/auth/: forgot-password.js  no-tenant-access.js  require-auth.js
components/blog/: footer.js  index.js  photoGallery.js
components/general/: admin-dashboard.js  google-map.js  map-container.js  navbar.js  sign-out.js  tenant-dashboard.js
components/loading/: simple-spinner.js
components/pages/: partner-dashboard.js  users.js
components/seo/: json-ld.js
components/styles/: index.js
docs/: firebase-auth-performance.md
lib/: db.js  fonts.js  image-proccessing.js  next-path.js
lib/email_templates/: index.js  invite_email.js
lib/firebase/: admin.js  (+6 more)
products/: product-links.js
public/: sitemap-0.xml  sw-v2.js  sw.js
utils/: index.js
(+615 files in other folders)
