
[package]
name = "hello-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros"] }
serde_json = { version = "1", features = ["raw_value"] }
smallvec = "1.13.2"
textwrap = "0.16.1"
unicode-width = "0.1.12"
url = "2.5.0"
# Documntation: https://docs.rs/vercel_runtime/latest/vercel_runtime
vercel_runtime = { version = "1.1.0" }

# Each handler has to be specified as [[bin]]
[[bin]]
name = "mascot"
path = "api/rust/chapter-1/mascot.rs"
